@@ -4,9 +4,9 @@ import au.com.dius.pact.consumer.dsl.PactBuilder;
 import au.com.dius.pact.consumer.junit5.PactConsumerTestExt;
 import au.com.dius.pact.consumer.junit5.PactTestFor;
 import au.com.dius.pact.consumer.junit5.ProviderType;
-import au.com.dius.pact.core.model.annotations.Pact;
 import au.com.dius.pact.core.model.V4Interaction;
 import au.com.dius.pact.core.model.V4Pact;
+import au.com.dius.pact.core.model.annotations.Pact;
 import br.com.bolaoboladao.carteira.presentation.messaging.dto.BetEvent;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
@@ -37,7 +37,7 @@ public class CarteiraConsumerPactTest {
     @Test
     @PactTestFor(pactMethod = "createBetCreatedPact")
     public void testBetCreatedEvent(List<V4Interaction.AsynchronousMessage> messages) throws Exception {
-        V4Interaction.AsynchronousMessage message = messages.get(0);
+        V4Interaction.AsynchronousMessage message = messages.getFirst();
         assertNotNull(message);
 
         String json = message.contentsAsString();
